--- a/action.yml
+++ b/action.yml
@@ -20,8 +20,8 @@ runs:
 
     - uses: li1ht2ay-3es/gi1-ac2io3s@rebase-repo
       with:
-        remote_repo: owner/repo
-        remote_branch: master
+        remote_repo: DragoonAethis/itch-dl
+        remote_branch: main
 
         token: ${{ inputs.token }}
         auto: true
