--- a/action.yml
+++ b/action.yml
@@ -67,6 +67,7 @@ runs:
       CXX: ccache g++
     shell: bash
     run: |
+      python -m pip install -U setuptools wheel build
       python -m build .
       itch-dl --help
 
